Closed
Bug 592941
Opened 16 years ago
Closed 16 years ago
Fix performance regression from bug 579323
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | beta7+ |
People
(Reporter: roc, Assigned: roc)
References
Details
Attachments
(1 file)
|
2.40 KB,
patch
|
tnikkel
:
review+
|
Details | Diff | Splinter Review |
Turns out that bug 579323 tripped over an existing bug: we failed to create a ThebesLayerInvalidRegionProperty() when setting up a new container layer in StoreNewDisplayItemData. This means that the next time we paint, in the new code in bug 579323 we'll find no ThebesLayerInvalidRegionProperty and repaint all the ThebesLayer children. (But after that, UpdateDisplayItemDataForFrame will set up the ThebesLayerInvalidRegionProperty so this won't happen again.) This is obviously very bad. Also, there's an existing problem which is that invalidates passed to FrameLayerBuilder::InvalidateThebesLayerContents between the first and second paint are currently being dropped on the floor!
Attachment #471402 -
Flags: review?(tnikkel)
Updated•16 years ago
|
Attachment #471402 -
Flags: review?(tnikkel) → review+
| Assignee | ||
Updated•16 years ago
|
Whiteboard: [needs landing]
| Assignee | ||
Updated•16 years ago
|
blocking2.0: --- → beta6+
| Assignee | ||
Comment 1•16 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/15ae10f019c2
One Linux number has come in so far, the regression is gone:
http://graphs.mozilla.org/graph.html#tests=[[71,1,433],[71,1,434],[71,1,435],[71,1,436],[71,1,437],[71,1,438],[71,1,439],[71,1,440],[71,1,441],[71,1,442],[71,1,443],[71,1,444],[71,1,445],[71,1,446],[71,1,447],[71,1,448],[71,1,449],[71,1,450],[71,1,688],[71,1,689],[71,1,690],[71,1,691],[71,1,692],[71,1,693],[71,1,694],[71,1,695],[71,1,696],[71,1,697],[71,1,698],[71,1,699],[71,1,700],[71,1,701],[71,1,702],[71,1,703],[71,1,704],[71,1,705],[71,1,706],[71,1,707],[71,1,708],[71,1,709],[71,1,710],[71,1,711],[71,1,712],[71,1,713],[71,1,714],[71,1,715],[71,1,716],[71,1,717],[71,1,895],[71,1,896],[71,1,897],[71,1,898],[71,1,899]]&sel=1283076625,1283405619
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
You need to log in
before you can comment on or make changes to this bug.
Description
•