Bug 592941. Fix performance regression by ensuring we create a ThebesLayerInvalidRegionProperty for frames with new container layers. r=tnikkel,a=blocking